# OLED_Stats

./: .gitignore  Dockerfile  LICENSE  OLED_display  README.md  UPSMonitor.py  autoinstall_oled_stats.sh  docker-compose.yml  install.sh  monitor.py  nohup.out  oleds_rm.sh  psutilstats.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  stats.py  stats2.py  statsdisplay.service  status.py
.github/workflows/: publish.yml
companion/: copy_db.sh  db  more_pearls  system-bangbox  system-default  system-standard  test123
companion/archive/2024041722:04/: db
companion/archive123/: db
config/: app.py  requirements.txt
conig/docker/: DockerFile
control_panel/: button.py
docs/: README.md
install/: button.service  install.sh  stats.service  update.sh
install/apache/: envvars  smartrack-config.conf
install/nginx/: smartrack-settings
install/services/: button.service  smartrack-settings.service  smartrack-settings.sh  stats.service
oled_stats/: gpio.py  psutilstats.py
smartrack_config/: index.php  process.php
smartrack_pi/: .env  __init__.py  app.py  button.py  cli copy.py  cli.py  config.json  main.py  nohup.out  stats.py
smartrack_pi/app/: style.css
smartrack_pi/cli/: __init__.py  cli.py  companion.py  display.py  main.py  net.py
smartrack_pi/display/: __init__.py  change_display.py  show.py
smartrack_pi/ip/: config.json  set_adaptor.py
smartrack_pi/net/: __init__.py  adaptor.py  config.json  set_adaptor.py
smartrack_pi/settings/: settings.py  software.py  update.py
tests/: test.py
utilities/: smartrack-settings.sh
(+1 files in other folders)
