[project]
name = "smartrack-pi"
version = "0.1.0"
description = ""
authors = [{name ="cubs818", email=  "craigmitchell18@gmail.com"}]
license = {file = "LICENSE"}
readme = "docs/README.md"

dependencies = [
    "adafruit-circuitpython-ssd1306 >= 2.12.17",
    "psutil >= 5.9.8",
    "pillow >= 10.3.0",
    "adafruit-python-shell >= 1.8.1",
    "adafruit-blinka >= 8.39.1",
    "streamlit >= 1.33.0",
    "netaddr >= 1.2.1",
    "streamlit-js-eval >= 0.1.7",
    "typer"
    
]
[project.optional-dependencies]
pi = [
    "rpi-gpio >= 0.7.1"
]
[tool.setuptools.packages.find]
include = ["smartrack_pi"] 
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
hello-world = "timmins:hello_world"